--- a/client/src/index.css
+++ b/client/src/index.css
@@ -120,7 +120,10 @@ button {
 }
 
 .attendance-list {
-  padding: 2rem;
+  padding-top: 5.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-bottom: 2rem;
   overflow-y: scroll;
 }
 
